# python-exercise

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py
src/app/: config.py
src/app/api/: __init__.py  webpage.py
src/app/controller/: webpage.py
src/app/models/: webpage.py
src/tests/unit/: test_webpage_model.py
