[tool.poetry]
name = "python-exercise"
version = "0.1.0"
description = ""
authors = ["Víctor M. Cortés Figueroa <victor.cortes@unosquare.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
