[tool.poetry]
name = "python-exercise"
version = "0.1.0"
description = ""
authors = ["Víctor M. Cortés Figueroa <victor.cortes@unosquare.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
Flask = "^2.2.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
pytest = "^7.1.2"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
